# hicc-usages

./: .gitignore  Makefile  README.md
examples/001_hello_world/cpp/: CMakeLists.txt  Makefile  hello_world.cpp  hello_world.h  main.cpp  standalone.sh
examples/001_hello_world/cpp/src/: hello_world.cpp
examples/001_hello_world/cpp/test/: main.cpp
examples/001_hello_world/rust/: Cargo.toml  build.rs
examples/001_hello_world/rust/src/: lib.rs
examples/001_hello_world/rust/tests/: smoke.rs
examples/002_function_overload/cpp/: CMakeLists.txt  Makefile  function_overload.cpp  function_overload.h  main.cpp  standalone.sh
examples/002_function_overload/cpp/src/: function_overload.cpp
examples/002_function_overload/cpp/test/: main.cpp
examples/003_default_args/cpp/: CMakeLists.txt  Makefile  default_args.cpp  default_args.h  main.cpp  standalone.sh
examples/003_default_args/cpp/src/: default_args.cpp
examples/003_default_args/cpp/test/: main.cpp
examples/004_inline_functions/cpp/: CMakeLists.txt  Makefile  inline_functions.cpp  inline_functions.h  main.cpp  standalone.sh
examples/004_inline_functions/cpp/src/: inline_functions.cpp
examples/004_inline_functions/cpp/test/: main.cpp
examples/005_variadic_functions/cpp/: CMakeLists.txt  Makefile  main.cpp  standalone.sh  variadic_functions.cpp  variadic_functions.h
examples/005_variadic_functions/cpp/src/: variadic_functions.cpp
examples/005_variadic_functions/cpp/test/: main.cpp
examples/006_class_basic/cpp/: CMakeLists.txt  Makefile  class_basic.cpp  class_basic.h  main.cpp  standalone.sh
examples/006_class_basic/cpp/src/: class_basic.cpp
examples/006_class_basic/cpp/test/: main.cpp
examples/007_class_constructor/cpp/: CMakeLists.txt  Makefile  class_constructor.cpp  class_constructor.h  main.cpp  standalone.sh
examples/007_class_constructor/cpp/src/: class_constructor.cpp
examples/007_class_constructor/cpp/test/: main.cpp
examples/007_class_constructor/rust_hicc/: Cargo.toml  build.rs
examples/007_class_constructor/rust_hicc/src/: lib.rs  main.rs
examples/007_class_constructor/rust_hicc/tests/: smoke.rs
examples/008_class_copy/cpp/: CMakeLists.txt  Makefile  class_copy.cpp  class_copy.h  main.cpp  standalone.sh
examples/008_class_copy/cpp/src/: class_copy.cpp
examples/008_class_copy/cpp/test/: main.cpp
examples/009_class_move/cpp/: CMakeLists.txt  Makefile  class_move.cpp  class_move.h  main.cpp  standalone.sh
examples/009_class_move/cpp/src/: class_move.cpp
examples/009_class_move/cpp/test/: main.cpp
examples/010_class_static/cpp/: CMakeLists.txt  Makefile  class_static.cpp  class_static.h  main.cpp  standalone.sh
examples/010_class_static/cpp/src/: class_static.cpp
examples/010_class_static/cpp/test/: main.cpp
examples/011_class_const/cpp/: CMakeLists.txt  Makefile  class_const.cpp  class_const.h  main.cpp  standalone.sh
examples/011_class_const/cpp/src/: class_const.cpp
examples/011_class_const/cpp/test/: main.cpp
examples/012_class_volatile/cpp/: CMakeLists.txt  Makefile  class_volatile.cpp  class_volatile.h  main.cpp  standalone.sh
examples/012_class_volatile/cpp/src/: class_volatile.cpp
examples/013_inheritance_single/cpp/: CMakeLists.txt  Makefile  inheritance_single.cpp  inheritance_single.h  main.cpp  standalone.sh
examples/014_inheritance_multiple/cpp/: CMakeLists.txt  Makefile  inheritance_multiple.cpp  inheritance_multiple.h  main.cpp  standalone.sh
examples/015_virtual_basic/cpp/: CMakeLists.txt  Makefile  main.cpp  standalone.sh  virtual_basic.cpp  virtual_basic.h
examples/016_virtual_pure/cpp/: CMakeLists.txt  Makefile  main.cpp  standalone.sh  virtual_pure.cpp  virtual_pure.h
examples/016_virtual_pure/rust/: Cargo.toml  build.rs
examples/017_virtual_override/cpp/: CMakeLists.txt  Makefile  main.cpp  standalone.sh  virtual_override.cpp  virtual_override.h
examples/018_virtual_diamond/cpp/: CMakeLists.txt  Makefile  main.cpp  standalone.sh  virtual_diamond.cpp  virtual_diamond.h
hicc/: .gitignore  Cargo.toml  README.md  librust_out.rlib  reference.md
hicc/hicc/: Cargo.toml  README.md  build.rs
hicc/hicc-autogen/: Cargo.toml
hicc/hicc-autogen/src/: attr.rs  class.rs  class_visitor.rs  cpp.rs  function.rs  import_class.rs  import_lib.rs  lib.rs  utils.rs  visitor.rs
hicc/hicc-build/: Cargo.toml
hicc/hicc-build/src/: lib.rs
hicc/hicc-cbindgen/: Cargo.toml  README.md
hicc/hicc-cbindgen/src/: main.rs  python.rs
hicc/hicc-examples/class/: build.rs
hicc/hicc-examples/datas/: Cargo.toml
hicc/hicc-examples/hicc-std/: Cargo.toml
hicc/hicc-examples/import_lib_class/: build.rs
hicc/hicc-examples/memory/: Cargo.toml
hicc/hicc-examples/placement_new/: Cargo.toml
hicc/hicc-macros/: Cargo.toml
hicc/hicc-macros/src/: lib.rs
hicc/hicc-rs/: .gitignore  Cargo.toml  README.md
hicc/hicc-rs-examples/async-func/: Cargo.toml
hicc/hicc-rs-examples/basic_lib/: Cargo.toml  README.md
hicc/hicc-rs-examples/foreign_type/: Cargo.toml
hicc/hicc-rs-examples/no-std/: Cargo.toml
hicc/hicc-rs-examples/rust-std/: Cargo.toml
hicc/hicc-rs-macros/: Cargo.toml
hicc/hicc-rs-macros/docs/: design.md
hicc/hicc-rs-macros/src/: export_class.rs  export_lib.rs  lib.rs  parse_types.rs
hicc/hicc-rs/src/: cabi.rs  cbindgen.rs  class.rs  foreign.rs  lib.rs
hicc/hicc-rs/tests/: bounded_generics.rs  bounded_params.rs  depth_lifetime.rs  fn_decl_lib.rs  lifetime_param.rs  mixed_decl_def.rs  mixed_lib.rs  mod_class_batch.rs  mod_class_use.rs  mod_lib_use.rs  multi_param.rs  multi_param_unused.rs  mut_param.rs  mut_self.rs  option_demo.rs  ptr_depth_1.rs  ptr_depth_2.rs  ptr_depth_3.rs  ptr_depth_4.rs  ref_slice_foreign.rs  self_consume_ref.rs  simple_demo.rs  where_clause.rs
hicc/hicc-std/: Cargo.toml  README.md  build.rs
hicc/hicc-std/src/: lib.rs  std_array.rs  std_deque.rs  std_forward_list.rs  std_list.rs  std_map.rs  std_queue.rs  std_set.rs  std_stack.rs  std_string.rs  std_test.rs  std_unordered_map.rs  std_unordered_set.rs  std_vector.rs
hicc/hicc/src/: any.rs  class.rs  exception.rs  function.rs  generic.rs  lib.rs  memory.rs
(+976 files in other folders)
