[package]
name = "hicc-cbindgen"
version = "0.1.0"
description = "Generate C header files and Python ctypes bindings for Rust crates using hicc-rs FFI bindings"
license = "MIT OR Apache-2.0"
authors = [ "hantingjun <hantingjun@huawei.com>" ]
repository = "https://gitcode.com/xuanwu/hicc"
keywords = ["ffi", "cbindgen", "c", "header", "python", "ctypes", "hicc-rs"]
edition = "2021"

[[bin]]
name = "hicc-cbindgen"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
hiopt = "0.1"
tempfile = "3"
serde_json = "1"
cbindgen = "0.29"
regex = "1"
