[package]
name = "hicc_macros"
version = "0.2.2"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "hantingjun <hantingjun@huawei.com>" ]
repository = "https://gitcode.com/xuanwu/hicc"
description = "Safe, efficient, full-featured FFI between Rust and C++"
keywords = ["ffi", "c++", "cpp", "cxx", "cc"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = { version = "2", features = [ "full", "extra-traits" ] }
hicc_autogen = { workspace = true }
