[package]
name = "hicc-std"
version = "0.2.2"
edition = "2021"
links = "hicc-std"
license = "MIT OR Apache-2.0"
authors = [ "hantingjun <hantingjun@huawei.com>" ]
repository = "https://gitcode.com/xuanwu/hicc"
description = "Based on hicc's ability to provide rust with the ability to call c++ standard container class interfaces"
keywords = ["c++", "std", "string", "set", "map"]

[dependencies]
hicc = { workspace = true }

[features]
default = []
test = []

[build-dependencies]
hicc-build = { workspace = true }
