[package]
name = "class_constructor"
version = "0.1.0"
edition = "2021"

[lib]
name = "class_constructor"
path = "src/lib.rs"

[dependencies]
hicc = { path = "../../../hicc/hicc", version = "0.2" }
hicc-std = { path = "../../../hicc/hicc-std", version = "0.2" }

[build-dependencies]
cc = "1.0"
hicc-build = { path = "../../../hicc/hicc-build", version = "0.2" }
