[package]
name = "hicc_usage_virtual_pure"
version = "0.1.0"
edition = "2021"

[lib]
name = "hicc_usage_virtual_pure"
path = "src/lib.rs"

[dependencies]
hicc = { path = "../../../hicc/hicc", version = "0.2" }

[build-dependencies]
hicc-build = { path = "../../../hicc/hicc-build", version = "0.2" }
cc = "1"
